--- a/app.css
+++ b/app.css
@@ -10,23 +10,43 @@ html {
 	height: 100%;
 }
 
-#content {
+.content{
 	text-align: center;
-	padding-top: 25%;
-	text-shadow: 0px 6px 5px rgba(0, 0, 0, 0.4),
-				0px 12px 18px rgba(0, 0, 0, 0.1),
-				0px 18px 36px rgba(0, 0, 0, 0.1);
+	padding-top: 5%;
 }
 
 h1	{
+	color: #11111111;
 	font-weight: 700;
 	font-size: 5em;
+	text-shadow: 10px 10px 5px rgba(255, 255, 255, 0.6),
+				15px 15px 18px rgba(255, 255, 255, 0.4),
+				20px 20px 36px rgba(255, 255, 255, 0.2);
 	
 }
 
+h3{
+	color: rgba(200, 200, 200, 0.6);
+	
+}
 
 hr	{
+	color: #111111;
 	width: 400px;
 	border-top: 1px solid #f8f8f8;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+	border-bottom: 1px solid rgba(255, 255, 255, 0.2)
+}
+
+.navbar-inner {
+    background:transparent;
+}
+
+nav {
+	font-size: 2em;
+}
+
+#active {
+	border-radius: 5px;
+	padding: 5px;
+	background-color: grey;
 }
