--- a/app.css
+++ b/app.css
@@ -12,7 +12,7 @@ html {
 
 .content{
 	text-align: center;
-	padding-top: 5%;
+	padding-top: 2%;
 }
 
 h1	{
@@ -26,7 +26,9 @@ h1	{
 }
 
 h3{
-	color: rgba(200, 200, 200, 0.6);
+	color: rgba(245, 245, 245, 0.8);
+	padding-top: 15px;
+	padding-bottom: 15px;
 	
 }
 
@@ -49,4 +51,9 @@ nav {
 	border-radius: 5px;
 	padding: 5px;
 	background-color: grey;
+}
+
+#placeHold {
+	max-width: 30%;
+	max-height: 30%;
 }
