--- a/app.css
+++ b/app.css
@@ -34,10 +34,10 @@ h3{
 
 hr	{
 	color: #111111;
-	width: 400px;
+	width: 60%;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.2)
-	max-width: 75%;
+
 }
 
 
